Android SDK Refactor